--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -4,7 +4,7 @@
 {% from "profile_macros.html" import profile, profileSaveBtn, profileImage %}
 <style>
 /*inline styling specific to profile page due to new two panel layout*/
-@media (max-width: 1737px) {.footer-container {border-top: 0 !important;}.container { overflow: hidden;}.logo-container { margin-right: 9em; }}
+@media (max-width: 1737px) {.footer-container {border-top: 0 !important;}.container { overflow: hidden;}.logo-container { margin-right: 9em; } body.open-nav .footer-container { margin-left: 10%;} }
 @media (max-width: 1690px) {body.open-nav  #homeFooter {margin-left: 10%;}}
 @media (max-width: 1495px) {body.open-nav .footer-container { margin-left: 10%; }}
 @media (max-width: 1361px) {body.open-nav .footer-container {text-align: right; padding-left: 1em; padding-right: 5em;}}
