--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -510,10 +510,7 @@ div.right-panel {
 }
 #patientAssessmentDownload {
   padding: 0.65em;
-  height: 2.86em;
-  font-size: 1em;
-  vertical-align: middle;
-  border-radius: 4px;
+  height: 2.6em;
 }
 
 #dataDownloadModal {
@@ -722,7 +719,8 @@ div.right-panel {
 }
 .profile-img {
   display: inline:block;
-  margin-top: -66px;
+  margin-top: 10px;
+  margin-left: 6px;
   img {
     width: 60px;
     border-radius: 45px;
@@ -890,7 +888,6 @@ div.right-panel {
     max-width: 100%;
   }
  #month {
-    margin-left: -1em;
     width: 180px;
     max-width: 100%;
   }
@@ -1028,7 +1025,6 @@ div.noOrg-container {
 }
 
  #profileStudyIDContainer {
-  margin-top: -1em;
   input {
     width: 50%;
     max-width: 100%;
@@ -1136,9 +1132,11 @@ div.noOrg-container {
   display: inline-block;
 }
 .profile-section {
-  margin-bottom: 1.5em;
   overflow-y: hidden;
   overflow-x: hidden;
+}
+.patient-detail-container .flex-item {
+  margin-right: 2em;
 }
 .name-section {
   margin-bottom: 1.2em;
@@ -1347,8 +1345,8 @@ div.noOrg-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  div {
-    margin: 0.5em 1.7em 0.5em 0.1em;
+  div.flex-item {
+    padding: 8px 24px 8px 0;
   }
 }
 
@@ -1402,6 +1400,9 @@ div.noOrg-container {
 /**override bootstrap style**/
 .checkbox input[type=checkbox], .checkbox-inline input[type=checkbox], .radio input[type=radio], .radio-inline input[type=radio] {
   margin-top:4px;
+  position: relative;
+  left: 1px;
+  margin-right: 6px;
 }
 
 div.modal-header, div.modal-footer {
@@ -1632,9 +1633,6 @@ div.org-container {
     }
     #month {
       width: 140px !important;
-    }
-    #year {
-      margin-left: -2.5em !important;
     }
   }
 }
@@ -2036,7 +2034,7 @@ div.org-container {
     height: 26em;
   }
   .side-lg {
-    height: 30em;
+    height: 32em;
   }
 }
 @media (min-width: 1200px) {
@@ -2057,9 +2055,9 @@ div.org-container {
     margin: -1em 0 1.5em;
   }
   .profile-img {
-  /*float: right;*/
   display: inline-block;
-  margin-top: -66px;
+  margin-top: 10px;
+  margin-left: 6px;
   img {
     width: 60px;
     border-radius: 45px;
