--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -510,7 +510,10 @@ div.right-panel {
 }
 #patientAssessmentDownload {
   padding: 0.65em;
-  height: 2.6em;
+  height: 2.86em;
+  font-size: 1em;
+  vertical-align: middle;
+  border-radius: 4px;
 }
 
 #dataDownloadModal {
@@ -1398,8 +1401,14 @@ div.noOrg-container {
 }
 
 /**override bootstrap style**/
-.checkbox input[type=checkbox], .checkbox-inline input[type=checkbox], .radio input[type=radio], .radio-inline input[type=radio] {
-  margin-top:4px;
+.checkbox input[type=checkbox], 
+.checkbox-inline input[type=checkbox], 
+.radio input[type=radio], 
+.radio-inline input[type=radio] {
+  margin-top: 4px;
+}
+.radio input[type=radio], 
+.radio-inline input[type=radio] {
   position: relative;
   left: 1px;
   margin-right: 6px;
