--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1357,6 +1357,10 @@ div.noOrg-container {
 .checkbox-inline input[type=checkbox], 
 .radio input[type=radio], 
 .radio-inline input[type=radio] {
+  margin-top: 4px;
+}
+.radio input[type=radio], 
+.radio-inline input[type=radio] {
   position: relative;
   left: 1px;
   margin-right: 6px;
