--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1229,6 +1229,10 @@ table.profile-audit-log TH,
 .checkbox-inline input[type=checkbox],
 .radio input[type=radio],
 .radio-inline input[type=radio] {
+  margin-top: 4px;
+}
+.radio input[type=radio],
+.radio-inline input[type=radio] {
   position: relative;
   left: 1px;
   margin-right: 6px;
