--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -10,7 +10,7 @@
 @media (max-width: 1293px) {.copyright-container {padding-left: 2em;}}
 @media (max-width: 1199px) {body.open-nav .footer-container { margin-left: 20%; }}
 @media (max-width: 1082px) {.copyright-container {margin-left: 2em;}}
-@media (max-width: 991px) { #homeFooter {padding-left: 3em !important;} body.open-nav .footer-container { margin-left: 50%; }}
+@media (max-width: 991px) { #homeFooter {padding-left: 3em !important;} body.open-nav .footer-container { margin-left: 7%; }}
 </style>
 <div id="stickyMenu"></div>
 <br/>
@@ -43,13 +43,13 @@
 {% if (current_user.has_role(ROLE.STAFF) and user.has_role(ROLE.PATIENT)) %}
     <nav id="indexNavBar">
     <span class="glyphicon index-list glyphicon-list-alt" data-toggle="tooltip" data-placement="top" title="{{ _('index list') }}"></span>
-    <span id="loginAsPatient" data-toggle="modal" data-target="#loginAsModal" class="link"><a data-toggle="tooltip" data-placement="top" title="For 'kiosk' style administration of an assessment">{{ _("Login as this Patient") }}</a></span>
+    <span id="loginAsPatient" data-toggle="modal" data-target="#loginAsModal" class="link"><a data-toggle="tooltip" data-placement="top" title="For 'kiosk' style administration of an assessment">{{ _("Login as this patient") }}</a></span>
     <div class="modal fade" id="loginAsModal" tabindex="-1" role="dialog" aria-labelledby="loginAsModalLabel">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="loginAsModalLabel">{{ _("Login as this Patient") }}</h4>
+                <h4 class="modal-title" id="loginAsModalLabel">{{ _("Login as this patient") }}</h4>
               </div>
               <div class="modal-body" style="font-size:0.9em">
                 <br/>
@@ -73,9 +73,9 @@
           {{profile(user, current_user, consent_agreements)}}
           <br/>
           {% if providerPerspective == 'true' %}
-             <br/><br/> {{ back_btn('patients','Patients List') }}
+             <br/><br/> {{ back_btn('patients','patients list') }}
           {% else %}
-              <br/><br/><a href="{{PORTAL}}/home" class="btn btn-xs btn-tnth-back"><small><b>&lt;</b> {{ _("Back to Home") }}</small></a>
+              <br/><br/><a href="{{PORTAL}}/home" class="btn btn-xs btn-tnth-back"><small><b>&lt;</b> {{ _("Back to home") }}</small></a>
           {% endif %}
       </div>
   </div>
@@ -226,7 +226,7 @@ $(document).ready(function(){
       $("#indexContainer").html(indexContent);
       $("#stickyMenu").html(indexContent);
       var listHeight = $("#stickyMenu ul").height();
-      if (parseInt(listHeight) > 0) $("#stickyMenu").height(parseInt(listHeight) + 40);
+      if (parseInt(listHeight) > 0) $("#stickyMenu").height(parseInt(listHeight) + 60);
     })();
 
     __stickyMenu = $("#stickyMenu"), __navBar = $("#profileHeader"), __stickyMenu_topPos = __stickyMenu.position().top, __homeFooter = $("#homeFooter"), __indexContainer = $("#indexContainer"), __indexIcon = $("#indexNavBar span.index-list"), __leftPanel = $(".left-panel");
