--- a/portal/templates/profile_create.html
+++ b/portal/templates/profile_create.html
@@ -87,7 +87,7 @@
             </div>
             <br/>
             <div>
-                {{ back_btn('patients','Patients List')}}
+                {{ back_btn('patients','patients list')}}
                 <a href="javascript:void()" style="visibility:hidden" id="profileBackLink"></a>
             </div>
             </div>
