--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1335,7 +1335,7 @@ div.noOrg-container {
   flex-wrap: wrap;
   justify-content: flex-start;
   div.flex-item {
-    padding: 8px 24px 8px 0;
+    padding: 8px 12px 8px 0;
   }
 }
 
@@ -2022,6 +2022,9 @@ div.org-container {
       flex-wrap: wrap;
     }
   }
+  .patient-detail-container .flex {
+    flex-direction: column;
+  }
   .side-md {
     height: 26em;
   }
@@ -2064,14 +2067,11 @@ div.org-container {
 
   #profileForm {
      .patient-detail-container .flex-item {
-        margin-right: 2em;
+        margin-right: 4em;
       }
     .communications-container .flex-item {
         margin-right: 5em;
       }
-    #lastname {
-      margin-left: -3em;
-    }
   }
 }
 
