minor styling fix of section title margin in eproms

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -785,9 +785,10 @@ div.right-panel {
 }
 .profile-item-title {
   color: #526960;
+  margin-bottom: 1.3em;
 }
 .profile-name-label, .profile-birthdate-label {
-  margin-bottom: -4px;
+  margin-bottom: -6px;
 }
 .profile-create-item-container {
   border-radius: 8px;
