--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -870,10 +870,11 @@ div.right-panel {
 
 .profile-item-title {
   color: @sectionTitleColor;
+  margin-bottom: 1.3em;
 }
 
 .profile-name-label, .profile-birthdate-label {
-  margin-bottom: -4px;
+  margin-bottom: -6px;
 }
 
 .profile-create-item-container {
