put send email macro back to profile page, previously removed by accident

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1263,6 +1263,7 @@
                         <h4 id="communicationsLoc" class="profile-item-title index-item">{{ _("Communications") }}</h4>
                         {{profileEmail(person)}}
                         {{profilePhone(person)}}
+                        {{profileSendEmail(person)}}
                     </div>
                 </div>
             </div>
