--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -800,6 +800,10 @@ h4.detail-title {
 #profileForm #bdGroup .flex {
   flex-wrap: nowrap;
 }
+#profileForm #erroremail {
+  width: 300px;
+  max-width: 100%;
+}
 #userEthnicity label {
   margin-bottom: 0;
 }
@@ -893,8 +897,6 @@ div.noOrg-container span {
   border: 1px solid #cec4c4;
   padding-left: 2em;
   padding-right: 2em;
-  margin-left: 1.5em;
-  margin-right: 1.5em;
 }
 #profileSendEmailContainer label {
   font-size: 0.95em;
@@ -907,6 +909,8 @@ div.noOrg-container span {
   color: #FFF;
 }
 #profileEmailMessage {
+  width: 300px;
+  max-width: 100%;
   font-size: 0.87em;
   margin-top: 1em;
   margin-left: 0.5em;
@@ -1790,6 +1794,7 @@ div.org-container input[type="checkbox"] {
 @media (min-width: 1070px) {
 	#profileSendEmailContainer {
 	  margin-top: 1em;
+    margin-left: 0.5em;
 	}
 }
 @media (max-width: 1199px) {
@@ -1897,6 +1902,11 @@ div.org-container input[type="checkbox"] {
     margin-bottom: 0.5em;
   }
 
+}
+@media (min-width: 1492px) {
+  #profileSendEmailContainer {
+    margin-left: 1.5em;
+  }
 }
 @media (max-width: 1745px) {
   body.open-nav .right-panel {
